Adding bank name, account number and max length to form

--- a/register.html
+++ b/register.html
@@ -48,18 +48,18 @@
                 <input type="text">
             </div>
             
-            <div class="form-group-1">
+            <div class="form-group">
                 <label for="">First name</label>
                 <input type="text">
             </div>
 
-            <div class="form-group-1">
+            <div class="form-group">
                 <label for="">Other names</label>
                 <input type="text">
             </div>
 
             <div class="form-group">
-                <label for="" >Gender</label>
+                <label for="gender" >Gender</label>
                 <select name="" id="">
                     <option value="">Select</option>
                     <option value="">Male</option>
@@ -68,19 +68,19 @@
             </div>
 
             <div class="form-group">
-                <label for="">Date of birth</label>
+                <label for="dbirth">Date of birth</label>
                 <input type="date" name="bdaymonth">
             
             </div>
 
             <div class="form-group">
-                <label for="">Email</label>
+                <label for="email">Email</label>
                 <input type="email" name="emailaddress">
             </div>
 
             <div class="form-group">
-                <label for="">Phone number</label>
-                <input type="number">
+                <label for="number">Phone number</label>
+                <input type="number" maxlength="11">
             </div>
 
             <div class="form-group">
@@ -251,7 +251,7 @@
 
             <div class="form-group">
                 <label for="">What's your ICT level</label>
-                <select name="" id="">
+                <select name="proficiency-level" id="">
                     <option value="">Select</option>
                     <option value="">Basic</option>
                     <option value="">Intermediate</option>
@@ -260,8 +260,44 @@
             </div>
 
             <div class="form-group">
+                <label for="">Bank Name</label>
+                <select name="bank-name" id="">
+                    <option value="">Select</option>
+                    <option value="">Access Bank Plc</option>
+                    <option value="">Citibank Nigeria Limited </option>
+                    <option value="">Diamond Bank Plc</option>
+                        <option value="">Ecobank Nigeria Plc</option>
+                        <option value="">Fidelity Bank Plc</option>
+                        <option value="">First Bank of Nigeria Limited</option>
+                        <option value="">First City Monument Bank Plc</option>
+                        <option value="">Guaranty Trust Bank Plc</option>
+                        <option value="">Heritage Banking Company Limited</option>
+                        <option value="">Jaiz Bank Plc</option>
+                        <option value=""> Keystone Bank Limited</option>
+                        <option value="">Polaris Bank Limited.</option> 
+                        <option value="">Providus Bank Limited</option>
+                        <option value="">Stanbic IBTC Bank Plc</option>
+                        <option value=""> Standard Chartered</option>
+                        <option value="">Sterling Bank Plc</option>
+                        <option value="">SunTrust Bank Nigeria Limited
+                        <option value="">Union Bank of Nigeria Plc</option>
+                        <option value="">United Bank for Africa Plc</option>
+                        <option value=""> Unity Bank Plc</option>
+                        <option value="">   Wema Bank Plc</option>
+                        <option value="">Zenith Bank Plc</option>
+                </select>
+            </div>
+
+            <div class="form-group">
+                <label for="">Account Number</label>
+                <input type="number" maxlength="11">
+            </div>
+
+
+
+            <div class="form-group">
                 <label for="">Bank Verification Number</label>
-                <input type="text">
+                <input type="text" maxlength="11">
             </div>
 
             <div class="form-group">
