--- a/register.html
+++ b/register.html
@@ -311,12 +311,12 @@
             </div>
             <div class="form-group">
                 <label for="">Password</label>
-                <input type="password" required>
+                <input type="password" id="password" required>
             </div>
 
             <div class="form-group">
                 <label for="">Confirm Password</label>
-                <input type="password" required>
+                <input type="password" id="cpassword" required>
             </div>
 
         
@@ -329,5 +329,13 @@
    
 
 </body>
+
+<script type="text/javascript">
+    var pass = document.getElementById("password").value;
+    var cpass =document.getElementById("cpassword").value;
+    if (pass === cpass){
+        
+    }
+</script>
 
 </html>
